[package]
name = "pwdgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clap = { version = "4.3.21", features = ["derive"] }
constcat = "0.3.0"
itertools = "0.11.0"
cli-clipboard = "0.4.0"
colored = "2.0.4"
